WEB-2558 Fixed overlapping label

--- a/fid-web/src/main/webapp/style/pageStyles/asset.css
+++ b/fid-web/src/main/webapp/style/pageStyles/asset.css
@@ -236,6 +236,7 @@
 	color: #222;
 	width: 155px;
 	font-weight:bold;
+	word-wrap: break-word;
 }
 
 .viewSection p {
